Skill bars style correction

--- a/contact.html
+++ b/contact.html
@@ -30,8 +30,9 @@
         </header>
 
         <!-- Main content -->
+        <br>
         <h2><center>Contact Me</center></h2>
-        <h3>Please, feel free to contact me directly using the following form or the header links.</h3>
+        <center><h3>Feel free to contact me directly using the following form or the header links.</h3></center>
 
         <div class="contact-form">
             <!-- Contact form -->
@@ -40,7 +41,7 @@
                 <input type="email" id="email" name="email" placeholder="Your Email" required>
                 <input type="text" id="subject" name="subject" placeholder="Subject" required>
                 <textarea id="message" name="message" placeholder="Your Message" required></textarea>
-                <button type="submit" class="button primary" id="send-message-btn">Send Message</button>
+                <center><button type="submit" class="button primary" id="send-message-btn">Send Message</button></center><br>
             </form>
 
             <!-- Success and error messages -->
@@ -49,9 +50,11 @@
         </div>
 
         <div class="contact-info">
-            <p>Or reach me directly via:</p>
-            <p>Email: <a href="mailto:dn.salazar10@gmail.com">dn.salazar10@gmail.com</a></p>
-            <p>Phone: +43 69010673819</p>
+            <center>
+            <p>Or reach me directly via:<br>
+            Email: <a href="mailto:dn.salazar10@gmail.com">dn.salazar10@gmail.com</a><br>
+            Phone: +43 69010673819</p>
+        </center>
         </div>
     </div>
     
