--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 							I’m passionate about turning complex data into actionable insights that drive decision-making in research projects. My leadership style is grounded in logical problem-solving and critical thinking, helping teams navigate challenges and achieve results.</p>
 						  <ul>
-							<li>Web Development</li>
+							 Spatial Modeling | GIS | Geographic Development | Remote Sensing | Data Analysis | Python | JavaScript | SQL | Big Data
 						  </ul>
 						</div>
 						<div class="about-divider"></div>
