--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
 				<section id="one" class="wrapper1 style2 special fade">
 					<section class="about-me special style2 fade">
 						<div class="about-left">
-						  <p>I'm a bilingual Geoscientist with a strong background in geographic data analysis, geospatial development, GIS, remote sensing, CRM management, and soil laboratory work. I have extensive experience using tools like ArcGIS, QGIS, Python, and Mapbox for spatial data modeling, as well as working with Big Data through programming languages like SQL, Python, R, and Matlab for statistical and geostatistical analysis.
-
-							I’m passionate about turning complex data into actionable insights that drive decision-making in research projects. My leadership style is grounded in logical problem-solving and critical thinking, helping teams navigate challenges and achieve results.</p>
+						  <p>I'm a Geoscientist with a strong background in spatial modeling, geospatial development, and geographic data analysis, along with expertise GIS, remote sensing, and Big Data. I have extensive experience working with advanced tools like ArcGIS Enterprise, QGIS, MapBox, and Carto, which I combine with my programming skills in Python, JavaScript, SQL, and R to create robust models and conduct geostatistical analysis. 
+							
+							My work focuses on transforming complex spatial data into actionable insights that drive informed decision-making across various sectors. I also bring a leadership style based on logical problem-solving and critical thinking, helping teams overcome challenges and achieve meaningful results.</p>
 						  <ul>
 							 Spatial Modeling | GIS | Geographic Development | Remote Sensing | Data Analysis | Python | JavaScript | SQL | Big Data
 						  </ul>
