--- a/CV.html
+++ b/CV.html
@@ -54,7 +54,7 @@
                             <div class="timeline-content">
                                 <p>2023 - 2024</p>
                                 <h3>GIS Analyst</h3>
-                                <img src="images/sbd.png" class="logo-container" alt="Landed Logo" class="responsive" width=50% height=20%><!--Banner Logo-->
+                                <img src="images/SBD.png" class="logo-container" alt="Landed Logo" class="responsive" width=50% height=20%><!--Banner Logo-->
                                 <p>Responsible for developing spatial solutions using ArcGIS Enterprise, JavaScript, and Python, while reducing manual effort through automated data processes with SQL Server and Alteryx.</p>
                             </div>
                             <br>
