Colores CDMX repo added

--- a/interactive.html
+++ b/interactive.html
@@ -170,7 +170,7 @@
 					<div class="iframe-container">
 						<div class="iframe-responsive">
 							<iframe class="custom-iframe" 
-									src="https://lifullconnect-data-journalism-prd.s3.eu-west-1.amazonaws.com/202207_colores/colores_stgo_mapa/index.html"
+									src="https://nicolevasos.github.io/colores_cdmx/#11/19.3155/-99.1450"
 									frameborder="0"
 									>
 							</iframe>
