--- a/interactive.html
+++ b/interactive.html
@@ -70,7 +70,7 @@
 					<div class="iframe-container">
 						<div class="iframe-responsive">
 							<iframe class="custom-iframe" 
-									src="https://dnsalazar10.github.io/ex/"
+									src="https://nicolevasos.github.io/placer_target_nsc/"
 									frameborder="0"
 									>
 							</iframe>
@@ -83,7 +83,7 @@
 						<p>
 							This spatial model combines factors like population growth, traffic, and rankings to help Target make strategic decisions, such as optimizing store locations and planning market expansion in Seattle.</p>
 						<ul class="actions">
-							<li><a href="https://dnsalazar10.github.io/ex/" 
+							<li><a href="https://nicolevasos.github.io/placer_target_nsc/" 
 								target="_blank"
 								class="button2">FULL SCREEN MAP</a></li>
 						</ul>
@@ -120,7 +120,7 @@
 						<a href="https://blog.properati.com.co/agosto-tuneles-de-viento-en-bogota/" target="_blank"><i>Read more...</i></a>
 					</p>
 					<ul class="actions">
-						<li><a href="https://lifullconnect-data-journalism-prd.s3.eu-west-1.amazonaws.com/202301_cerros_altos/test/BOG_wind/index1.html" 
+						<li><a href="https://nicolevasos.github.io/cerros_stgo/" 
 							target="_blank"
 							class="button1">FULL SCREEN MAP</a></li>
 					</ul>
@@ -187,7 +187,7 @@
 						</p>
 						
 						<ul class="actions">
-							<li><a href="https://lifullconnect-data-journalism-prd.s3.eu-west-1.amazonaws.com/202207_colores/colores_stgo_mapa/index.html" 
+							<li><a href="https://nicolevasos.github.io/colores_cdmx/#11/19.3155/-99.1450" 
 								target="_blank"
 								class="button4">FULL SCREEN MAP</a></li>
 						</ul>
