--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					
 					<nav id="nav">
 						<ul>
-							<li><a href="index.html">Home</a></li>
+							<li><a href="index.html">Home</a></li>							
 							<li>
 								<a href="projects.html">Projects</a>
 								<ul>
@@ -39,6 +39,11 @@
 									<li><a href="storymaps.html">Story Maps</a></li>
 									<li><a href="dashboards.html">Dashboards</a></li>
 									<li><a href="talks.html">Talks</a></li>
+								</ul>
+							</li>
+							<li><a href="CDE.html">CDE</a>
+								<ul>
+									<li><a href="interactive.html">1 Semester</a></li>
 								</ul>
 							</li>
 							<li><a href="CV.html">CV</a></li>
@@ -67,7 +72,8 @@
 					<section class="about-me special style2 fade">
 						<div class="about-left">
 						  <p>I'm a Geoscientist with a strong background in spatial modeling, geospatial development, and geographic data analysis, along with expertise GIS, remote sensing, and Big Data. I have extensive experience working with advanced tools like ArcGIS Enterprise, QGIS, MapBox, and Carto, which I combine with my programming skills in Python, JavaScript, SQL, and R to create robust models and conduct geostatistical analysis. 
-							
+							<br>
+							<br>
 							My work focuses on transforming complex spatial data into actionable insights that drive informed decision-making across various sectors. I also bring a leadership style based on logical problem-solving and critical thinking, helping teams overcome challenges and achieve meaningful results.</p>
 						  <ul>
 							 Spatial Modeling | GIS | Geographic Development | Remote Sensing | Data Analysis | Python | JavaScript | SQL | Big Data
