--- a/3d.html
+++ b/3d.html
@@ -20,6 +20,7 @@
 				<header id="header">
 					<h1 id="logo">
 						<a href="index.html">
+							
 							<img src="images/NS-Logo.png" class="logo-container" alt="Landed Logo" class="responsive" width="95" height="45"><!--Banner Logo-->
 						</a>
 					</h1>
@@ -35,6 +36,7 @@
 									<li><a href="dashboards.html">Dashboards</a></li>
 								</ul>
 							</li>
+							<li><a href="CDE.html">CDE</a></li>
 							<li><a href="CV.html">CV</a></li>
 							<li><a href="contact.html" class="button primary">Contact</a></li>
 						</ul>
