--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,16 @@
             <nav id="nav">
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="projects.html">Projects</a></li>
+                    <li>
+                        <a href="projects.html">Projects</a>
+                        <ul>
+                            <li><a href="interactive.html">Interactive Maps</a></li>
+                            <li><a href="3d.html">3D Maps</a></li>
+                            <li><a href="storymaps.html">Story Maps</a></li>
+                            <li><a href="dashboards.html">Dashboards</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="CDE.html">CDE</a></li>
                     <li><a href="CV.html">CV</a></li>
                     <li><a href="contact.html" class="button primary">Contact</a></li>
                 </ul>
