--- a/interactive.html
+++ b/interactive.html
@@ -40,6 +40,7 @@
 									<li><a href="dashboards.html">Dashboards</a></li>
 								</ul>
 							</li>
+							<li><a href="CDE.html">CDE</a></li>
 							<li><a href="CV.html">CV</a></li>
 							<li><a href="contact.html" class="button primary">Contact</a></li>
 						</ul>
