--- a/storymaps.html
+++ b/storymaps.html
@@ -35,6 +35,7 @@
 									<li><a href="dashboards.html">Dashboards</a></li>
 								</ul>
 							</li>
+							<li><a href="CDE.html">CDE</a></li>
 							<li><a href="CV.html">CV</a></li>
 							<li><a href="contact.html" class="button primary">Contact</a></li>
 						</ul>
