CDE file modified

--- a/CDE.html
+++ b/CDE.html
@@ -13,7 +13,8 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
-	<body class="is-preload landing" style="background-image: url('images/pic03.jpg');background-size: cover;>
+	<body class="is-preload landing" style="background-image: url('images/pic03.jpg'); background-size: cover;">
+
 		<div id="page-wrapper">
 
 			<!-- Header -->
