--- a/index.html
+++ b/index.html
@@ -41,11 +41,7 @@
 									<li><a href="talks.html">Talks</a></li>
 								</ul>
 							</li>
-							<li><a href="CDE.html">CDE</a>
-								<ul>
-									<li><a href="interactive.html">1 Semester</a></li>
-								</ul>
-							</li>
+							<li><a href="CDE.html">CDE</a></li>
 							<li><a href="CV.html">CV</a></li>
 							<li><a href="contact.html" class="button primary">Contact</a></li>
 						</ul>
