correct sdb poster

--- a/CDE.html
+++ b/CDE.html
@@ -72,11 +72,11 @@
 						<a href="https://storymaps.arcgis.com/stories/f347ad49843a420081dd4e9507224c66" target="_blank">View Project</a>
 					</div>
 					<div class="project-card">
-						<img src="images/STM_poster.png" alt="Project 4">
+						<img src="images/stm_poster.png" alt="Project 4">
 						<h3>Spatial Data Management & Modeling - Poster</h3>
 						<p>This project explores the power of spatial databases in GIS, utilizing PostgreSQL and PostGIS for efficient data management, analysis, and integration. It examines spatial queries, database structuring, and the role of spatial databases in enhancing geospatial workflows and decision-making.</p>
 						<p class="italic">Feb 24, 2025</p>
-						<a href="images/test1.png" target="_blank">View Project</a>
+						<a href="images/poster_stm.png" target="_blank">View Project</a>
 					</div>
 					<div class="project-card">
 						<img src="images/eye_tracking.png" alt="Project 5">
