--- a/CDE.html
+++ b/CDE.html
@@ -65,7 +65,7 @@
 					</div>
 					<div class="project-card">
 						<img src="images/nav_hohe.png" alt="Project 3">
-						<h3>Navigating Hohen Tauren: A Practical Guide for Visitors</h3>
+						<h3>Navigating Hohen Tauern: A Practical Guide for Visitors</h3>
 						<p>An interactive story map showcasing the evolution of Hohe Tauern National Park, highlighting its geology, glaciers, and key landmarks. Designed for tourists, it blends visuals, information and an intuitive layout for an immersive exploration experience.</p>
 						<br>
 						<p class="italic">Feb 28, 2025</p>
