--- a/CV.html
+++ b/CV.html
@@ -217,20 +217,20 @@
                         <div class="download-images">
                             <!-- CV in English -->
                             
-                            <a href="path/to/your/english_cv.pdf" download="CV_English.pdf">
+                            <a href="docs/enCV_NicoleSalazar_uptodate.pdf" download="SalazarNicole_CV_English.pdf">
                                 <img src="images/CV-en.png" alt="CV English" class="thumbnail">
                                 <h4>Complete CV - English</h4>
 
                             </a>
                             <!-- CV in Spanish -->
-                            <a href="path/to/your/spanish_cv.pdf" download="CV_Spanish.pdf">
+                            <a href="docs/spCV_NicoleSalazar.pdf" download="SalazarNicole_CV_Spanish.pdf">
                                 <img src="images/CV_sp.png" alt="CV Spanish" class="thumbnail">
                                 <h4>Complete CV - Spanish</h4>
                             </a>
                             
 
                             <!-- Bachelor's Thesis -->
-                            <a href="path/to/your/bachelors_thesis.pdf" download="Bachelors_Thesis.pdf">
+                            <a href="docs/SalazarNicole_Bachelor_Thesis.pdf" download="SalazarNicole_Bachelors_Thesis.pdf">
                                 <img src="images/bsc_thesis.png" alt="Bachelor's Thesis" class="thumbnail">
                                 <h4>Bachelors Thesis</h4>
                             </a>
