Development version of the ePortfolio

--- a/index.html
+++ b/index.html
@@ -111,22 +111,23 @@
 				</section>
 
 			<!-- Footer 514c5b-->
-				<footer class="footer">
-						<div class="logo-container">
-							<a href="https://master-cde.eu/" target="_blank">
-								<img src="images/CDE.png" alt="Logo 1" class="footer-logo logo1">
-							</a>
-							<a href="https://erasmus-plus.ec.europa.eu/" target="_blank">
-								<img src="images/ERASMUS.jpg" alt="Logo 2" class="footer-logo logo2">
-							</a>
-							<a href="https://www.plus.ac.at/?lang=en" target="_blank">
-								<img src="images/plus.png" alt="Logo 3" class="footer-logo logo3">
-							</a>
-							<a href="https://www.upol.cz/en/" target="_blank">
-								<img src="images/UPOL.png" alt="Logo 4" class="footer-logo logo4">
-							</a>
-						</div>
-				</footer>
+			<footer class="footer">
+				<div class="logo-container">
+					<a href="https://master-cde.eu/" target="_blank" rel="noopener noreferrer" aria-label="Visit Master CDE website">
+						<img src="images/CDE.png" alt="Master CDE Logo" class="footer-logo" loading="lazy" width="120" height="auto">
+					</a>
+					<a href="https://erasmus-plus.ec.europa.eu/" target="_blank" rel="noopener noreferrer" aria-label="Visit Erasmus+ website">
+						<img src="images/ERASMUS.jpg" alt="Erasmus+ Logo" class="footer-logo" loading="lazy" width="120" height="auto">
+					</a>
+					<a href="https://www.plus.ac.at/?lang=en" target="_blank" rel="noopener noreferrer" aria-label="Visit PLUS University website">
+						<img src="images/plus.png" alt="PLUS University Logo" class="footer-logo" loading="lazy" width="120" height="auto">
+					</a>
+					<a href="https://www.upol.cz/en/" target="_blank" rel="noopener noreferrer" aria-label="Visit Palacký University website">
+						<img src="images/UPOL.png" alt="Palacký University Logo" class="footer-logo" loading="lazy" width="120" height="auto">
+					</a>
+				</div>
+			</footer>
+			
 
 		</div>
 
